--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "date-fns": "^4.1.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1"
   }
